fixed z-index currentvalue

--- a/src/app/analysis/analysis.component.scss
+++ b/src/app/analysis/analysis.component.scss
@@ -109,7 +109,7 @@
 
   .chart__currentvalue {
     position: absolute;
-    z-index: 20;
+    z-index: 5;
 
     color: #fff;
 
